[package]
authors = ["Hironori Yamamoto <mr.nikoru918@gmail.com>"]
description = "Context Manager for AWS Profiles"
edition = "2021"
license = "MIT"
name = "awsctx"
version = "0.4.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
clap = {version = "3.1.18", features = ["derive"]}
clap_complete = "3.1.4"
config = {version = "0.13.1", features = ["ini", "yaml"]}
dirs = "4.0.0"
handlebars = "4.2.2"
log = "0.4.17"
once_cell = "1.10.0"
regex = "1.5.6"
rust-ini = "0.18.0"
serde = {version = "1.0.139", features = ["derive"]}
serde_derive = "1.0.139"
serde_json = "1.0.82"
serde_yaml = "0.8.25"
simplelog = {version = "0.12.0", features = ["paris", "ansi_term"]}
skim = "0.9.4"
thiserror = "1.0.31"

[dev-dependencies]
rstest = "0.12.0"
tempfile = "3.3.0"
