[package]
authors = ["Hironori Yamamoto <mr.nikoru918@gmail.com>"]
description = "Context Manager for AWS Profiles"
edition = "2021"
license = "MIT"
name = "awsctx"
version = "0.5.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
clap = {version = "3.2.16", features = ["derive"]}
clap_complete = "3.2.3"
config = {version = "0.13.1", features = ["ini", "yaml"]}
dirs = "4.0.0"
handlebars = "4.3.3"
log = "0.4.17"
maplit = "1.0.2"
once_cell = "1.16.0"
regex = "1.7.0"
rust-ini = "0.18.0"
serde = {version = "1.0.140", features = ["derive"]}
serde_derive = "1.0.140"
serde_json = "1.0.82"
serde_yaml = "0.9.2"
simplelog = {version = "0.12.0", features = ["paris", "ansi_term"]}
skim = "0.10.2"
thiserror = "1.0.31"

[dev-dependencies]
rstest = "0.15.0"
tempfile = "3.3.0"
