[package]
authors = ["Hironori Yamamoto <mr.nikoru918@gmail.com>"]
description = "Context Manager for AWS Profiles"
edition = "2021"
license = "MIT"
name = "awsctx"
version = "0.5.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = {version = "3.2.25", features = ["derive"]}
clap_complete = "3.2.5"
config = {version = "0.13.4", features = ["ini", "yaml"]}
dirs = "4.0.0"
handlebars = "4.3.7"
log = "0.4.21"
maplit = "1.0.2"
once_cell = "1.16.0"
regex = "1.7.3"
rust-ini = "0.18.0"
serde = {version = "1.0.200", features = ["derive"]}
serde_derive = "1.0.200"
serde_json = "1.0.116"
serde_yaml = "0.9.34"
simplelog = {version = "0.12.2", features = ["paris", "ansi_term"]}
skim = "0.10.4"
thiserror = "1.0.59"

[dev-dependencies]
rstest = "0.15.0"
tempfile = "3.3.0"
